<resources>
    <string name="app_name">AAD_Practice_Project</string>
    <string name="gads_logo">gads logo</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skill_iq_badge">Skill Iq badge</string>
    <string name="top_learner_badge">Top Learner Badge</string>
    <string name="project_submission">Project Submission</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="cancel_button">cancel button</string>
    <string name="are_you_sure_msg">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="success">Green Tick</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="submission_failed">Submission not Successful</string>
    <string name="submitting">Submitting...</string>
    <string name="back_arrow">back arrow</string>

</resources>