<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".SubmissionActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/submission_toolbar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/black"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:src="@drawable/gads_mod" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="15dp"
        android:text="@string/project_submission"
        android:textColor="@color/golden_orange"
        android:textSize="26sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="60dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <EditText
            android:id="@+id/first_name_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="49"
            android:autofillHints="@string/first_name"
            android:background="@drawable/cornered_edittext_bg"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3" />

        <EditText
            android:id="@+id/last_name_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="48"
            android:autofillHints="@string/last_name"
            android:background="@drawable/cornered_edittext_bg"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/email_address_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/last_name"
        android:background="@drawable/cornered_edittext_bg"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/github_link_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="60dp"
        android:autofillHints="@string/last_name"
        android:background="@drawable/cornered_edittext_bg"
        android:hint="@string/project_on_github_link"
        android:inputType="textUri"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/submission_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="20dp"
        android:background="@drawable/cornered_button"
        android:backgroundTint="@color/golden_orange"
        android:paddingHorizontal="40dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp" />
</LinearLayout>